# oauth

./: .env  Cargo.toml  READMD.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220702_125358_response_type.rs  m20220720_125359_client.rs  m20220720_125360_requests.rs  m20220801_214142_code.rs
src/: main.rs
src/entities/: clients.rs  codes.rs  mod.rs  prelude.rs  requests.rs  sea_orm_active_enums.rs
src/templates/: approve.html  error.html  index.html
