[package]
name = "oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
actix-web = "4.1.0"
dotenv = "0.15"
futures = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sea-orm-migration = "^0.9.0"
migration = { path = "migration" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.9.0"
log = "0.4"
tera = { version = "1", default-features = false }
lazy_static = "1.0"

[dependencies.sea-orm]
version = "0.9"
features = [
    "debug-print",
    "runtime-actix-rustls",
    "sqlx-postgres",
    "with-json"
]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]